--- a/Pddikti.html
+++ b/Pddikti.html
@@ -4,77 +4,31 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Data Mahasiswa</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      background: #f4f2ff;
-      color: #000;
-    }
-    .container {
-      background: #fff;
-      margin: 1.5rem;
-      padding: 1.5rem;
-      border-radius: 1rem;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    h1, h2, h3, p {
-      margin: 0 0 0.75rem 0;
-    }
-    .label {
-      font-size: 0.95rem;
-      font-weight: 400;
-      color: #333;
-    }
-    .value {
-      font-weight: 700;
-    }
-    .value-purple {
-      font-weight: 700;
-      color: #6b21a8;
-    }
-    .row {
-      margin-bottom: 1.2rem;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <header class="header">
+    <img src="Pddikti.jpg" alt="Logo PDDikti" class="logo">
+    <h1 class="title">Pangkalan Data<br>Pendidikan Tinggi</h1>
+    <div class="menu-icon">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+  </header>
 
-  <div class="container">
-    <div class="row">
-      <div class="label">Nama</div>
-      <div class="value">PUTRI MERIANA </div>
+  <!-- Konten utama -->
+  <main class="content">
+    <div class="card">
+      <p><strong>Nama</strong><br>PUTRI MERIANA</p>
+      <p><strong>Perguruan Tinggi</strong><br><span class="purple">Universitas Indraprasta PGRI</span></p>
+      <p><strong>Jenis Kelamin</strong><br>Laki-laki</p>
+      <p><strong>Tanggal Masuk</strong><br>12 September 2022</p>
+      <p><strong>NIM</strong><br>202243501355</p>
+      <p><strong>Jenjang - Program Studi</strong><br>Sarjana – <span class="purple">Teknik Informatika</span></p>
+      <p><strong>Status Awal Mahasiswa</strong><br>Peserta didik baru</p>
+      <p><strong>Status Terakhir Mahasiswa</strong><br><b>Aktif–2024/2025 Ganjil</b></p>
     </div>
-    <div class="row">
-      <div class="label">Perguruan Tinggi</div>
-      <div class="value value-purple">Universitas Indraprasta PGRI</div>
-    </div>
-    <div class="row">
-      <div class="label">Jenis Kelamin</div>
-      <div class="value">Perempuan</div>
-    </div>
-    <div class="row">
-      <div class="label">Tanggal Masuk</div>
-      <div class="value">12 September 2022</div>
-    </div>
-    <div class="row">
-      <div class="label">NIM</div>
-      <div class="value">202243501355</div>
-    </div>
-    <div class="row">
-      <div class="label">Jenjang - Program Studi</div>
-      <div class="value">Sarjana – <span class="value-purple">Teknik Informatika</span></div>
-    </div>
-    <div class="row">
-      <div class="label">Status Awal Mahasiswa</div>
-      <div class="value">Peserta didik baru</div>
-    </div>
-    <div class="row">
-      <div class="label">Status Terakhir Mahasiswa</div>
-      <div class="value">Aktif–2024/2025 Ganjil</div>
-    </div>
-  </div>
-
+  </main>
 </body>
 </html>
