--- a/Pddikti.html
+++ b/Pddikti.html
@@ -9,13 +9,15 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <div class="logo">Pangkalan Data <br><strong>Pendidikan Tinggi</strong></div>
-    <div class="menu-toggle" onclick="toggleMenu()">&#8942;</div>
+    <div class="logo">
+      <img src="Pddikti.jpg" alt="Logo PDDIKTI">
+    </div>
+    <div class="menu-toggle" onclick="toggleMenu()">&#9776;</div> <!-- ikon bar -->
   </header>
 
   <!-- Navigation Overlay -->
   <div id="navOverlay" class="nav-overlay">
-    <div class="close-btn" onclick="toggleMenu()">&#10006;</div>
+    <div class="close-btn" onclick="toggleMenu()">&#10005;</div> <!-- ikon silang -->
     <ul>
       <li><a href="#">Tentang PDDikti &gt;</a></li>
       <li><a href="#">Kebijakan Privasi</a></li>
@@ -28,7 +30,7 @@
   <!-- Biodata Section -->
   <div class="biodata-box">
     <h2>Biodata Mahasiswa</h2>
-    <p><strong>Nama</strong><br>MERIANA PUTRI</p>
+    <p><strong>Nama</strong><br>AFTA AULIA MIFDA</p>
     <p><strong>Perguruan Tinggi</strong><br>Universitas Indraprasta PGRI</p>
     <p><strong>Jenis Kelamin</strong><br>Laki-laki</p>
     <p><strong>Tanggal Masuk</strong><br>12 September 2022</p>
