--- a/Pddikti.html
+++ b/Pddikti.html
@@ -30,7 +30,7 @@
   <!-- Biodata Section -->
   <div class="biodata-box">
     <h2>Biodata Mahasiswa</h2>
-    <p><strong>Nama</strong><br>AFTA AULIA MIFDA</p>
+    <p><strong>Nama</strong><br>MERIANA PUTRI</p>
     <p><strong>Perguruan Tinggi</strong><br>Universitas Indraprasta PGRI</p>
     <p><strong>Jenis Kelamin</strong><br>Laki-laki</p>
     <p><strong>Tanggal Masuk</strong><br>12 September 2022</p>
