--- a/Pddikti.html
+++ b/Pddikti.html
@@ -39,6 +39,7 @@
     .logo span {
       font-weight: bold;
       font-size: 1rem;
+      line-height: 1.1;
     }
 
     .hamburger {
@@ -56,10 +57,18 @@
       border-radius: 2px;
     }
 
+    /* Offcanvas menu */
     nav {
-      display: none;
+      position: fixed;
+      top: 0;
+      right: -250px;
+      width: 250px;
+      height: 100%;
       background: #fff;
-      padding: 1rem;
+      box-shadow: -2px 0 5px rgba(0,0,0,0.1);
+      padding: 2rem 1rem;
+      transition: right 0.3s ease;
+      z-index: 999;
     }
 
     nav ul {
@@ -67,12 +76,17 @@
     }
 
     nav ul li {
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     nav ul li a {
       text-decoration: none;
       color: #444;
+      font-size: 1rem;
+    }
+
+    nav.show {
+      right: 0;
     }
 
     .breadcrumbs {
@@ -122,11 +136,6 @@
     .highlight {
       color: #7e33ff;
     }
-
-    /* Toggle menu open */
-    .show {
-      display: block;
-    }
   </style>
 </head>
 <body>
@@ -134,7 +143,7 @@
   <header>
     <div class="logo">
       <img src="Pddikti.jpg" alt="Logo PDDIKTI" />
-      <span>Pangkalan Data Pendidikan Tinggi</span>
+      <span>Pangkalan Data<br>Pendidikan Tinggi</span>
     </div>
     <div id="menu-toggle" class="hamburger">
       <span></span>
@@ -145,9 +154,11 @@
 
   <nav id="nav-links">
     <ul>
-      <li><a href="#">Beranda</a></li>
-      <li><a href="#">Mahasiswa</a></li>
-      <li><a href="#">Data Kampus</a></li>
+      <li><a href="">Tentang Pddikti &gt;</a></li>
+      <li><a href="">Kebijakan Privasi</a></li>
+      <li><a href="">Riwayat Pendidikan</a></li>
+      <li><a href="">Transkrip Nilai</a></li>
+      <li><a href="">Status Kuliah</a></li>
     </ul>
   </nav>
 
@@ -161,7 +172,7 @@
 
   <div class="content-box">
     <p><span class="label">Nama</span><br>
-       <span class="value">MERIANA PUTRI</span></p>
+       <span class="value">AFTA AULIA MIFDA</span></p>
     <p><span class="label">Perguruan Tinggi</span><br>
        <span class="value highlight">Universitas Indraprasta PGRI</span></p>
     <p><span class="label">Jenis Kelamin</span><br>
@@ -180,10 +191,10 @@
 
   <script>
     const toggleButton = document.getElementById('menu-toggle');
-    const navLinks = document.getElementById('nav-links');
+    const nav = document.getElementById('nav-links');
 
     toggleButton.addEventListener('click', () => {
-      navLinks.classList.toggle('show');
+      nav.classList.toggle('show');
     });
   </script>
 
