--- a/Pddikti.html
+++ b/Pddikti.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PD Dikti</title>
+  <title>PDDikti</title>
   <style>
     * {
       margin: 0;
@@ -17,6 +17,7 @@
       color: #111;
     }
 
+    /* HEADER */
     header {
       display: flex;
       justify-content: space-between;
@@ -57,7 +58,7 @@
       border-radius: 2px;
     }
 
-    /* Offcanvas menu */
+    /* NAVIGASI */
     nav {
       position: fixed;
       top: 0;
@@ -71,8 +72,23 @@
       z-index: 999;
     }
 
+    nav.show {
+      right: 0;
+    }
+
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.2rem;
+      color: #a325d3;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
     nav ul {
       list-style: none;
+      margin-top: 50px;
     }
 
     nav ul li {
@@ -85,19 +101,18 @@
       font-size: 1rem;
     }
 
-    nav.show {
-      right: 0;
-    }
-
+    /* BREADCRUMBS */
     .breadcrumbs {
       font-size: 0.9rem;
       padding: 1rem;
+      color: #333;
     }
 
     .breadcrumbs b {
       color: #000;
     }
 
+    /* TITLE BOX */
     .title-box {
       background: linear-gradient(to right, #a325d3, #7e33ff);
       color: white;
@@ -106,10 +121,11 @@
       margin: 0 1rem;
       border-radius: 16px;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       margin-bottom: 1rem;
     }
 
+    /* CONTENT BOX */
     .content-box {
       background: white;
       margin: 0 1rem 2rem;
@@ -140,6 +156,7 @@
 </head>
 <body>
 
+  <!-- HEADER -->
   <header>
     <div class="logo">
       <img src="Pddikti.jpg" alt="Logo PDDIKTI" />
@@ -152,27 +169,29 @@
     </div>
   </header>
 
+  <!-- NAVIGASI -->
   <nav id="nav-links">
+    <div class="close-btn" id="close-nav">×</div>
     <ul>
-      <li><a href="">Tentang Pddikti &gt;</a></li>
-      <li><a href="">Kebijakan Privasi</a></li>
-      <li><a href="">Riwayat Pendidikan</a></li>
-      <li><a href="">Transkrip Nilai</a></li>
-      <li><a href="">Status Kuliah</a></li>
+      <li><a href="#">Tentang PDDIKTI &gt;</a></li>
+      <li><a href="#">Kebijakan Privasi</a></li>
     </ul>
   </nav>
 
+  <!-- BREADCRUMB -->
   <div class="breadcrumbs">
     Beranda > <b>Mahasiswa</b>
   </div>
 
+  <!-- JUDUL BIODATA -->
   <div class="title-box">
     Biodata Mahasiswa
   </div>
 
+  <!-- ISI BIODATA -->
   <div class="content-box">
     <p><span class="label">Nama</span><br>
-       <span class="value">AFTA AULIA MIFDA</span></p>
+       <span class="value">MERIANA PUTRI</span></p>
     <p><span class="label">Perguruan Tinggi</span><br>
        <span class="value highlight">Universitas Indraprasta PGRI</span></p>
     <p><span class="label">Jenis Kelamin</span><br>
@@ -189,12 +208,18 @@
        <span class="value">Aktif - 2024/2025 Ganjil</span></p>
   </div>
 
+  <!-- JS UNTUK TOGGLE NAV -->
   <script>
     const toggleButton = document.getElementById('menu-toggle');
     const nav = document.getElementById('nav-links');
+    const closeBtn = document.getElementById('close-nav');
 
     toggleButton.addEventListener('click', () => {
-      nav.classList.toggle('show');
+      nav.classList.add('show');
+    });
+
+    closeBtn.addEventListener('click', () => {
+      nav.classList.remove('show');
     });
   </script>
 
